# Mercurial-Signatures

./: .gitattributes  .gitignore  README.md
c/: CMakeLists.txt  README.md  dockerfile  mercurial_signature_scheme.c  miracl_core_c_bn254-CMakeLists.txt
cpp/: CMakeLists.txt  README.md  dockerfile  mercurial_signature_scheme.cpp  miracl_core_cpp_bn254-CMakeLists.txt
python/: README.md  delegatable_anon_cred_scheme.py  dockerfile  mercurial_signature_scheme.py  pyproject.toml  test_delegatable_anon_cred_scheme.py  test_mercurial_signature_scheme.py
rust/: Cargo.toml  README.md  dockerfile
rust/src/: bin.rs  lib.rs
